--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,79 @@
-version: "3"
+# version: "3"
+# services:
+#   api:
+#     build: .
+#     ports:
+#       - 8000:8000
+#     volumes:
+#       - ./:/usr/src/app
+#     # env_file:
+#     #     - ./.env
+#     environment:
+#       - DATABASE_HOSTNAME=db
+#       - DATABASE_PORT=5429
+#       - DATABASE_PASSWORD=password123
+#       - DATABASE_NAME=fastapi_master
+#       - DATABASE_USERNAME=postgres
+#       - SECRET_KEY=09d25e094faa6ca2556c818166b7a9563b93f7099f6f0f4caa6cf63b88e8d3e7
+#       - ALGORITHM=HS256
+#       - ACCESS_TOKEN_EXPIRE_MINUTES=30
+#     command: alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+
+#     depends_on:
+#       - db
+
+#   db:
+#     image: postgres
+#     ports:
+#       - 5429:5429
+#     environment:
+#       - DATABASE_USERNAME=postgres
+#       - POSTGRES_PASSWORD=password123
+#       - POSTGRES_DB=fastapi_master
+#       - DATABASE_PORT=5429
+#     volumes:
+#       - postgres-db:/var/lib/postgresql/data
+
+# volumes:
+#   postgres-db:
+
+
+
+# docker-compose.yml
+
+version: '3.8'
+
 services:
-  api:
+  web:
     build: .
-    ports:
-      - 8000:8000
+    command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; uvicorn app.main:app --host 0.0.0.0 && alembic upgrade head'
     volumes:
       - ./:/usr/src/app
-    # env_file:
-    #     - ./.env
+    env_file:
+        - ./.env
     environment:
-      - DATABASE_HOSTNAME=postgres
+      - DATABASE_HOSTNAME=db
       - DATABASE_PORT=5432
-      - DATABASE_PASSWORD=password123
-      - DATABASE_NAME=fastapi
-      - DATABASE_USERNAME=postgres
+      - DATABASE_PASSWORD=fastapi_traefik
+      - DATABASE_NAME=fastapi_traefik
+      - DATABASE_USERNAME=fastapi_traefik
       - SECRET_KEY=09d25e094faa6ca2556c818166b7a9563b93f7099f6f0f4caa6cf63b88e8d3e7
       - ALGORITHM=HS256
       - ACCESS_TOKEN_EXPIRE_MINUTES=30
-    command: alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    ports:
+      - 8008:8000
     depends_on:
-      - postgres
-
-  postgres:
-    image: postgres
-    environment:
-      - POSTGRES_PASSWORD=password1234
-      - POSTGRES_DB=fastapi
+      - db
+  db:
+    image: postgres:15-alpine
     volumes:
-      - postgres-db:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data/
+    expose:
+      - 5432
+    environment:
+      - POSTGRES_USER=fastapi_traefik
+      - POSTGRES_PASSWORD=fastapi_traefik
+      - POSTGRES_DB=fastapi_traefik
 
 volumes:
-  postgres-db:
+  postgres_data:
